@@ -32,15 +32,20 @@ class MealServiceImplTest extends UnitTestBase {
     private static final Long USER_ID = 1L;
     private static final Long MEAL_ID = 100L;
     private static final Long DISH_ID = 200L;
-    private static final Long NON_EXISTENT_DISH_ID = 999L;
+    private static final Long NON_EXISTENT_DISH_ID = 999999999L;
     private static final LocalDate TEST_DATE = LocalDate.of(2024, 1, 15);
     private static final ZoneId EUROPE_PARIS = ZoneId.of("Europe/Paris");
     private static final ZoneId UTC = ZoneId.of("UTC");
+    private static final double INVALID_SERVING_ZERO = 0.0;
+    private static final double INVALID_SERVING_NEG = -1.0;
+    private static final double VALID_SERVINGS = 2.0;
 
     @Mock
     private MealRepository mealRepository;
+
     @Mock
     private DishRepository dishRepository;
+
     @Mock
     private UserRepository userRepository;
 
@@ -54,12 +59,7 @@ class MealServiceImplTest extends UnitTestBase {
     @BeforeEach
     void setUp() {
         testUser = User.builder().id(USER_ID).build();
-        testDish = Dish.builder()
-                .id(DISH_ID)
-                .calories(300)
-                .build();
-
-        // Configure common lenient mocks
+        testDish = Dish.builder().id(DISH_ID).calories(300).build();
         lenient().when(userRepository.findById(USER_ID)).thenReturn(Optional.of(testUser));
         lenient().when(dishRepository.findById(DISH_ID)).thenReturn(Optional.of(testDish));
     }
@@ -81,130 +81,92 @@ class MealServiceImplTest extends UnitTestBase {
             // Setup test data
             MealDish validMealDish = new MealDish(
                     new MealDishId(),
-                    null,  // meal reference will be set during save
+                    null,
                     testDish,
-                    2.0
+                    VALID_SERVINGS
             );
-
             Meal newMeal = Meal.builder()
                     .mealDishes(new ArrayList<>(Collections.singletonList(validMealDish)))
                     .build();
 
-            // Configure mock behaviors
             when(mealRepository.save(any(Meal.class))).thenAnswer(invocation -> {
                 Meal savedMeal = invocation.getArgument(0);
-                // Simulate JPA relationship management
                 savedMeal.getMealDishes().forEach(md -> md.setMeal(savedMeal));
                 return savedMeal;
             });
 
-            // Execute service method
+            // Execute
             Meal result = mealService.createMeal(USER_ID, newMeal);
 
-            // Verify results
+            // Verify
             assertNotNull(result, "Saved meal should not be null");
             assertEquals(testUser, result.getUser(), "Meal should be associated with correct user");
             assertEquals(1, result.getMealDishes().size(), "Meal should contain exactly one dish");
-
-            MealDish resultMealDish = result.getMealDishes().getFirst();
+            MealDish resultMealDish = result.getMealDishes().get(0);
             assertNotNull(resultMealDish.getId(), "MealDish should have generated ID");
             assertEquals(result, resultMealDish.getMeal(), "MealDish should reference parent meal");
             assertEquals(testDish, resultMealDish.getDish(), "MealDish should reference correct dish");
 
-            // Verify interactions
             verify(mealRepository).save(newMeal);
             verify(dishRepository).findById(DISH_ID);
         }
 
         @ParameterizedTest
-        @ValueSource(doubles = {0.0, -1.0})
+        @ValueSource(doubles = {INVALID_SERVING_ZERO, INVALID_SERVING_NEG})
         @DisplayName("Should throw exception when servings are invalid")
         void createMeal_invalidServings_throwsException(double invalidServings) {
-            // Setup test data with invalid servings
-            MealDish invalidMealDish = new MealDish(
-                    new MealDishId(),
-                    null,
-                    testDish,
-                    invalidServings
-            );
+            MealDish invalidMealDish = new MealDish(new MealDishId(), null, testDish, invalidServings);
+            Meal invalidMeal = Meal.builder().mealDishes(List.of(invalidMealDish)).build();
 
-            Meal invalidMeal = Meal.builder()
-                    .mealDishes(List.of(invalidMealDish))
-                    .build();
-
-            // Execute & verify exception
             assertThrows(IllegalArgumentException.class,
                     () -> mealService.createMeal(USER_ID, invalidMeal),
                     "Should reject meal with invalid servings");
 
-            // Verify no dish lookup occurred
             verifyNoInteractions(dishRepository);
         }
 
         @Test
         @DisplayName("Should throw exception when referenced dish doesn't exist")
         void createMeal_nonExistentDish_throwsException() {
-            // Setup test data with unknown dish
             Dish unknownDish = Dish.builder().id(NON_EXISTENT_DISH_ID).build();
-            MealDish invalidMealDish = new MealDish(
-                    new MealDishId(),
-                    null,
-                    unknownDish,
-                    2.0
-            );
-
-            Meal invalidMeal = Meal.builder()
-                    .mealDishes(List.of(invalidMealDish))
-                    .build();
-
-            // Configure mock to return empty optional
+            MealDish invalidMealDish = new MealDish(new MealDishId(), null, unknownDish, VALID_SERVINGS);
+            Meal invalidMeal = Meal.builder().mealDishes(List.of(invalidMealDish)).build();
             when(dishRepository.findById(NON_EXISTENT_DISH_ID)).thenReturn(Optional.empty());
 
-            // Execute & verify exception
             Exception exception = assertThrows(UnprocessableEntityException.class,
                     () -> mealService.createMeal(USER_ID, invalidMeal));
-
             assertTrue(exception.getMessage().contains(
-                            String.format("Dish with id %d was not found", NON_EXISTENT_DISH_ID)),
-                    "Exception message should reference missing dish");
-
-            // Verify dish lookup attempt
+                    String.format("Dish with id %d was not found", NON_EXISTENT_DISH_ID)));
             verify(dishRepository).findById(NON_EXISTENT_DISH_ID);
         }
 
         @Test
         @DisplayName("Should normalize meal name whitespace")
         void createMeal_normalizesNameWhitespace() {
-            // Setup test data with messy name
-            MealDish validMealDish = new MealDish(
-                    new MealDishId(),
-                    null,
-                    testDish,
-                    2.0
-            );
-
+            MealDish validMealDish = new MealDish(new MealDishId(), null, testDish, VALID_SERVINGS);
             Meal newMeal = Meal.builder()
                     .name("  Breakfast Special   ")
-                    .mealDishes(new ArrayList<>(Collections.singletonList(validMealDish)))
+                    .mealDishes(new ArrayList<>(List.of(validMealDish)))
                     .build();
-
-            // Configure mock save behavior
             when(mealRepository.save(any(Meal.class))).thenAnswer(invocation -> {
                 Meal savedMeal = invocation.getArgument(0);
                 savedMeal.getMealDishes().forEach(md -> md.setMeal(savedMeal));
                 return savedMeal;
             });
 
-            // Execute service method
             Meal result = mealService.createMeal(USER_ID, newMeal);
-
-            // Verify name normalization
-            assertEquals("Breakfast Special", result.getName(),
-                    "Should trim and normalize whitespace in meal name");
-
-            // Verify interactions
+            assertEquals("Breakfast Special", result.getName(), "Should trim and normalize whitespace in meal name");
             verify(mealRepository).save(any(Meal.class));
             verify(dishRepository).findById(DISH_ID);
+        }
+
+        @Test
+        @DisplayName("Should throw IllegalArgumentException when no dishes provided")
+        void createMeal_WithoutDishes_ThrowsValidationError() {
+            Meal invalidMeal = Meal.builder().mealDishes(Collections.emptyList()).build();
+            assertThrows(IllegalArgumentException.class,
+                    () -> mealService.createMeal(USER_ID, invalidMeal),
+                    "Should reject meal without dishes");
         }
     }
 
@@ -215,45 +177,30 @@ class MealServiceImplTest extends UnitTestBase {
         @Test
         @DisplayName("Should retrieve existing meal by ID")
         void getUserMeal_existingMeal_returnsMeal() {
-            // Setup mock data
             Meal expectedMeal = new Meal();
             when(mealRepository.findByIdAndUserId(MEAL_ID, USER_ID))
                     .thenReturn(Optional.of(expectedMeal));
-
-            // Execute service method
             Meal result = mealService.getUserMeal(USER_ID, MEAL_ID);
-
-            // Verify results
-            assertEquals(expectedMeal, result, "Should return found meal");
+            assertEquals(expectedMeal, result);
             verify(mealRepository).findByIdAndUserId(MEAL_ID, USER_ID);
         }
 
         @Test
         @DisplayName("Should throw exception for non-existent meal ID")
         void getUserMeal_nonExistentMeal_throwsException() {
-            // Configure mock to return empty
             when(mealRepository.findByIdAndUserId(MEAL_ID, USER_ID))
                     .thenReturn(Optional.empty());
-
-            // Execute & verify exception
             assertThrows(EntityNotFoundException.class,
-                    () -> mealService.getUserMeal(USER_ID, MEAL_ID),
-                    "Should throw when meal not found");
+                    () -> mealService.getUserMeal(USER_ID, MEAL_ID));
         }
 
         @Test
         @DisplayName("Should retrieve all user meals")
         void getAllUserMeals_returnsAllMeals() {
-            // Setup mock data
             List<Meal> expectedMeals = List.of(new Meal(), new Meal());
             when(mealRepository.findAllByUserId(USER_ID)).thenReturn(expectedMeals);
-
-            // Execute service method
             List<Meal> result = mealService.getAllUserMeals(USER_ID);
-
-            // Verify results
-            assertEquals(expectedMeals.size(), result.size(),
-                    "Should return all user meals");
+            assertEquals(expectedMeals.size(), result.size());
             verify(mealRepository).findAllByUserId(USER_ID);
         }
     }
@@ -265,44 +212,28 @@ class MealServiceImplTest extends UnitTestBase {
         @Test
         @DisplayName("Should filter meals by specific date")
         void getUserMealsForDay_returnsDailyMeals() {
-            // Calculate date range
             Instant start = TEST_DATE.atStartOfDay(EUROPE_PARIS).toInstant();
             Instant end = TEST_DATE.plusDays(1).atStartOfDay(EUROPE_PARIS).toInstant();
-
-            // Setup mock data
             List<Meal> expectedMeals = List.of(new Meal());
             when(mealRepository.findByUserIdAndCreatedAtBetweenOrderByCreatedAt(USER_ID, start, end))
                     .thenReturn(expectedMeals);
-
-            // Execute service method
             List<Meal> result = mealService.getUserMealsForDay(USER_ID, TEST_DATE, EUROPE_PARIS);
-
-            // Verify results
-            assertEquals(expectedMeals.size(), result.size(),
-                    "Should return meals for specified day");
+            assertEquals(expectedMeals.size(), result.size());
             verify(mealRepository).findByUserIdAndCreatedAtBetweenOrderByCreatedAt(USER_ID, start, end);
         }
 
         @Test
         @DisplayName("Should filter meals by date range")
         void getUserMealsBetween_returnsDateRangeMeals() {
-            // Define date range
             LocalDate startDate = LocalDate.of(2024, 1, 1);
             LocalDate endDate = LocalDate.of(2024, 1, 31);
             Instant startInstant = startDate.atStartOfDay(UTC).toInstant();
             Instant endInstant = endDate.plusDays(1).atStartOfDay(UTC).toInstant();
-
-            // Setup mock data
             List<Meal> expectedMeals = List.of(new Meal(), new Meal());
             when(mealRepository.findByUserIdAndCreatedAtBetweenOrderByCreatedAt(USER_ID, startInstant, endInstant))
                     .thenReturn(expectedMeals);
-
-            // Execute service method
             List<Meal> result = mealService.getUserMealsBetween(USER_ID, startDate, endDate, UTC);
-
-            // Verify results
-            assertEquals(expectedMeals.size(), result.size(),
-                    "Should return meals within date range");
+            assertEquals(expectedMeals.size(), result.size());
             verify(mealRepository).findByUserIdAndCreatedAtBetweenOrderByCreatedAt(USER_ID, startInstant, endInstant);
         }
     }
